Use Ryan's sweet tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,30 @@
-set-option -g prefix C-b
-bind-key C-b last-window
+# Work nicely with emacs key combos
+set -g default-terminal "screen-256color"
+set-window-option -g xterm-keys on
+
+# Bind <C-q> to leader
+unbind C-b
+set -g prefix C-q
+bind-key q send-prefix
 
 # Start numbering at 1
 set -g base-index 1
 
 # Allows for faster key repetition
 set -s escape-time 0
+
+# The | and - keys split windows like you'd expect
+unbind %
+bind | split-window -h
+bind - split-window -v
+
+# Leader-hjkl select other panes (vim-style)·
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+set -g history-limit 10000                                 # increase scrollback lines
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
@@ -24,6 +43,26 @@ set-window-option -g window-status-current-bg red
 # Sane scrolling
 set -g mode-mouse on 
 
-# force a reload of the config file 
-unbind r 
-bind r source-file ~/.tmux.conf
+# Use Ryan N's slick status bar
+set -g status-left-length 52
+set -g status-right-length 451
+set -g status-fg white
+set -g status-bg colour234
+set -g window-status-activity-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+set -g message-fg colour16
+set -g message-bg colour221
+set -g message-attr bold
+
+set -g status-left-bg colour252
+set -g status-left-fg colour235
+set -g status-left ' $#S #[fg=default,bg=colour234,nobold]'
+
+set -g window-status-format "#[fg=white,bg=colour234] #I » #W"
+set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #I > #W #[fg=colour39,bg=colour234,nobold]"
+
+set -g status-right-fg colour252
+set -g status-right-bg colour234
+set -g status-right '#[fg=red]«Leader: C-q»#[fg=default]  #(whoami)@#(hostname) %H:%M '
+
