Tmux has clock now. :shipit:

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+set -g status-interval 1
 set -g history-limit 10000                                 # increase scrollback lines
 
 # Rather than constraining window size to the maximum size of any client
@@ -64,5 +65,5 @@ set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #
 
 set -g status-right-fg colour252
 set -g status-right-bg colour234
-set -g status-right '#[fg=red]«Leader: C-q»#[fg=default]  #(whoami)@#(hostname) %H:%M '
+set -g status-right '#[fg=red]«Leader: C-q»#[fg=default]  #(whoami)@#(hostname) %H:%M:%S '
 
