Make shift-arrow keys work in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Work nicely with emacs key combos
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set-window-option -g xterm-keys on
 
 # Bind <C-q> to leader
